# rustuya-manager

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  rustuya-manager.py
.github/workflows/: _test.yml  catalog-sync.yml  ci.yml  docker-publish.yml  release.yml
backend/: app.py
backend/static/: index.html
backend/static/assets/: index-D1kRzQRL.js  index-D2PSkTaf.css  index-D5JEhAuQ.js
backend/templates/: index.html
docs/: internals.md  plugin-runtime-design.md
examples/: rustuya-manager.service
examples/derived_plugin/: README.md  pyproject.toml
examples/derived_plugin/rustuya_derived/: __init__.py
examples/hello_plugin/: README.md  pyproject.toml
examples/hello_plugin/rustuya_hello/: __init__.py
examples/hello_plugin/rustuya_hello/static/: index.js  init.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/store/: useStore.js
scripts/: capture_screenshots.py  check.sh  sync_catalog.py
src/rustuya_manager/: __init__.py  __main__.py  catalog.py  cli.py  cloud.py  diff.py  models.py  mqtt.py  payload.py  plugins.py  requirements.py  scan.py  state.py  versions.py  web.py  wizard.py
src/rustuya_manager/data/: plugin-sources.json  plugins.json
src/rustuya_manager/static/: api.js  app.js  cards.js  dom.js  header-actions.js  i18n.js  modal-confirm.js  modal-device.js  modal-log.js  modal-plugins.js  modal-sync.js  modal-wizard.js  plugins.js  render.js  state.js  ws.js
src/rustuya_manager/static/locales/: en.json  ko.json
src/rustuya_manager/templates/: index.html
tests/: test_catalog.py  test_cli.py  test_cloud.py  test_e2e_bridge.py  test_integration_mosquitto.py  test_models.py  test_mqtt_client.py  test_payload.py  test_plugins.py  test_requirements.py  test_scan.py  test_state.py  test_topic_helpers.py  test_versions.py  test_web.py  test_wizard.py
tests/e2e_ui/: conftest.py  test_plugins_modal.py  test_smoke.py
tests/leaks/: conftest.py  test_bootstrap_leak.py  test_embed_bridge_leak.py  test_mqtt_leak.py  test_scan_leak.py  test_state_leak.py  test_wizard_leak.py  test_ws_leak.py
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html
