[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rustuya-manager"
version = "0.1.0rc19"
description = "Management tool for rustuya-bridge — keeps Tuya Cloud devices and the bridge in sync"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "aiomqtt>=2.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyrustuyabridge>=0.2.0rc5,<0.3",  # 0.2.0rc5: out-of-mutex shutdown token → stop() works without a signal (rustuya 0.3.0-rc.5)
    "tuyawizard>=0.1.8",  # 0.1.8 adds close()/context manager so the wizard's per-call requests.Sessions don't leak (~750-950 KB/cycle)
    "cryptography>=41",   # missing dep of tuya-sharing-sdk
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
rustuya-manager = "rustuya_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rustuya_manager = ["templates/*.html", "static/*.js", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# e2e_ui boots uvicorn in a session-scoped daemon thread and drives the page
# via Playwright's sync API (greenlet bridge). Both leak event-loop state into
# the main thread, which then collides with pytest-asyncio's per-test Runner
# when async unit tests run in the same session. Default to excluding e2e here
# so a bare `pytest` is fast and conflict-free; CI runs `pytest -m e2e` in a
# separate step.
addopts = "-m 'not e2e'"
markers = [
    "e2e: browser-driven UI smoke tests (Playwright + uvicorn); run separately",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",  # formatter handles line length
    "B008",  # FastAPI Depends/Body in defaults
]

[tool.ruff.lint.isort]
known-first-party = ["rustuya_manager"]

[tool.ruff.format]
quote-style = "double"
