[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rustuya-manager"
version = "0.1.0rc27"
description = "Management tool for rustuya-bridge — keeps Tuya Cloud devices and the bridge in sync"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "aiomqtt>=2.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyrustuyabridge>=0.2.0rc18,<0.3",  # 0.2.0rc11 added the `reconfigure` self-terminate that _EmbeddedBridgeSupervisor (cli.py) drives. rc12–rc16 are bridge-side correctness fixes the manager benefits from: rc12 retained cleanup covers the whole fleet, rc13 fixes a cleanup deadlock + coalesced-removes gap, rc15 counts PubAcks instead of buffered writes, rc16 adds a liveness-probe singleton check so post-power-loss startup can't deadlock. rc17 makes multi-target commands (remove cascade, clear) reply per-id so the manager can act on each ack individually instead of guessing which devices the bridge wiped. rc18 moves the cache-mode retained snapshot from `{type}=passive` to `{type}=state` (passive becomes a no-retain delta); the manager wildcards `{type}` so no code change, but pinning rc18 keeps a mixed deployment from leaving orphan `passive` retained snapshots that briefly seed `retained_only` before the bridge's scavenger clears them.
    "tuyawizard>=0.1.9",  # 0.1.8 added close()/context manager to stop the per-call requests.Session leak (~750-950 KB/cycle); 0.1.9 then changed close()'s default so it no longer POSTs to `/v1.0/m/token/terminal/expire` — the previous default revoked the saved tokens server-side after every wizard run, forcing a fresh QR scan on the next call. Manager's wizard.close() is called with no args so it picks up the new revoke_terminal=False default automatically.
    "cryptography>=41",   # missing dep of tuya-sharing-sdk
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
rustuya-manager = "rustuya_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rustuya_manager = ["templates/*.html", "static/*.js", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# e2e_ui boots uvicorn in a session-scoped daemon thread and drives the page
# via Playwright's sync API (greenlet bridge). Both leak event-loop state into
# the main thread, which then collides with pytest-asyncio's per-test Runner
# when async unit tests run in the same session. Default to excluding e2e here
# so a bare `pytest` is fast and conflict-free; CI runs `pytest -m e2e` in a
# separate step.
addopts = "-m 'not e2e'"
markers = [
    "e2e: browser-driven UI smoke tests (Playwright + uvicorn); run separately",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",  # formatter handles line length
    "B008",  # FastAPI Depends/Body in defaults
]

[tool.ruff.lint.isort]
known-first-party = ["rustuya_manager"]

[tool.ruff.format]
quote-style = "double"
